import { mount } from 'enzyme';
import React from 'react';
import Downshift from 'downshift';

import SubaccountTypeahead from '../SubaccountTypeahead';

const subaccounts = [
  { id: 1, name: 'Subaccount 1' },
  { id: 2, name: 'Subaccount 2' },
  { id: 3, name: 'Subaccount 3' },
  { id: 4, name: 'Subaccount 4' },
  { id: 5, name: 'Subaccount 5' },
  { id: 6, name: 'Subaccount 6' }
];

const props = {
  onChange: jest.fn(),
  subaccounts
};

it('renders correctly', () => {
  const wrapper = mount(<SubaccountTypeahead {...props} />);
  expect(wrapper).toMatchSnapshot();
});

it('renders correctly with a selected item', () => {
  const wrapper = mount(<SubaccountTypeahead {...props} />);
  wrapper.find(Downshift).node.selectItem(subaccounts[0]);
  expect(wrapper).toMatchSnapshot();
});

it('renders correctly with no subaccounts', () => {
  const wrapper = mount(<SubaccountTypeahead subaccounts={[]} />);
  expect(wrapper).toMatchSnapshot();
});
